Update TEZ and Spark